--- a/server/vine_comment/vine_comment/templates/plugin/comments_plugin_new.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comments_plugin_new.html
@@ -29,7 +29,7 @@
  <!-- 修改中 --> 
 
 {% load staticfiles %}                    
-                    
+        
 <div id="commet_new">  
         <div id="commetList_new">
             <ul style="list-style-type:none; padding:10px;margin:10px; ">
@@ -40,7 +40,13 @@
                         <tr><tbody>  
                             <td>
                                 <span class="user">
-                                    <img class="vc-image" width=50 height=50  data-role="user-avatar" src="//{{ request.META.HTTP_HOST }}{% static 'icons/test.jpg' %}" alt="Avatar">
+                                    <a href="/home/{{flag}}">
+                                        {% if message.author.user|has_avatar %}
+                                            {% avatar message.author.user 30 %}
+                                       {% else %} <!-- no head sculpture -->
+                                            <img class="vc-image" width=50 height=50  data-role="user-avatar" src="//{{ request.META.HTTP_HOST }}{% static 'icons/test.jpg' %}" alt="Avatar">
+                                       {% endif %}
+                                    </a>    
                                 </span>
                             </td>
                             <td>
