disable resize of textareas

--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -201,8 +201,8 @@ function url_post_comment() {
     var urlpostform = '<form method="post" action="/comment/xxx" enctype="multipart/form-data" id="urlpostForm" onsubmit="return prepost(event);"> '+
                         '<input type="hidden" name="csrfmiddlewaretoken" value="3y7OqhlDip0Gvwkr6uqXDFagDw5kC7JR" />'+
                           '<div id="div_id_url" class="form-group"><label for="id_url" class="control-label  requiredField">'+
-                            'Url<span class="asteriskField">*</span></label><div class="controls "><textarea class="textarea form-control" cols="40" id="id_url" name="url" rows="10"></textarea></div></div><div id="div_id_comment_str" class="form-group"><label for="id_comment_str" class="control-label  requiredField">'+
-                            'comment<span class="asteriskField">*</span></label><div class="controls "><textarea class="textarea form-control" cols="40" id="id_comment_str" name="comment" rows="10"></textarea></div></div>'+
+                            'Url<span class="asteriskField">*</span></label><div class="controls "><textarea class="textarea form-control" cols="40" id="id_url" name="url" rows="10" style="resize:none"></textarea></div></div><div id="div_id_comment_str" class="form-group"><label for="id_comment_str" class="control-label  requiredField">'+
+                            'comment<span class="asteriskField">*</span></label><div class="controls "><textarea class="textarea form-control" cols="40" id="id_comment_str" name="comment" rows="10" style="resize:none"></textarea></div></div>'+
 
                         '<div class="control-group">'+
                             '<div class="controls">'+
