--- a/server/vine_comment/vine_comment/templates/plugin/comments_plugin_new.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comments_plugin_new.html
@@ -40,13 +40,11 @@
                         <tr><tbody>  
                             <td>
                                 <span class="user">
-                                    <a href="/home/{{flag}}">
                                        {% if message.author.user|has_avatar %}
-                                            {% avatar 50 %}
+                                             {% avatar message.author.user 50 %}
                                        {% else %} <!-- no head sculpture -->
                                             <img class="vc-image" width=50 height=50  data-role="user-avatar" src="//{{ request.META.HTTP_HOST }}{% static 'icons/test.jpg' %}" alt="Avatar">
-                                       {% endif %}
-                                    </a>    
+                                       {% endif %} 
                                 </span>
                             </td>
                             <td>
