--- a/server/vine_comment/vine_comment/templates/site/comments_list.html
+++ b/server/vine_comment/vine_comment/templates/site/comments_list.html
@@ -78,7 +78,7 @@
          <span>
            <a href="/home/{{flag}}">
              {% if message.author.user|has_avatar %}
-               {% avatar message.author.user 30 %}
+               {% avatar  %}
              {% else %} <!-- no head sculpture -->
                <img class="avatar large border" style="height:30px; weight:30px;" src="/static/portrait/default-user-portrait.png" alt="头像">
                {% endif %}
