--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -94,8 +94,13 @@
   <div class="col-lg-3">
     <div class="panel panel-default" style="height:200px; padding:10px;">
 		TODO-UI</br></br>
+    {% if user %}
+    <strong>{{user}}</strong></br></br>
+    发帖数：{{author.comments_sum}}</br>回帖数：</br>浏览数：</br>点赞数：
+    {% else %}
 		<strong>Annoymous</strong></br></br>
-		发帖数：2</br>回帖数：39</br>浏览数：1024</br>点赞数：67
+		发帖数：</br>回帖数：39</br>浏览数：1024</br>点赞数：67
+    {% endif %}
     </div>
   </div>
 </div>
