--- a/server/vine_comment/vine_comment/templates/iframe/sa.html
+++ b/server/vine_comment/vine_comment/templates/iframe/sa.html
@@ -6,6 +6,15 @@
 <style>
 #loadImg{position:absolute;}
 #loadImg div{display:table-cell;text-align:center;vertical-align:middle;}
+body {
+    margin: 0;
+}
+.vine-iframe {
+    border: 0;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+}
 </style>
 
 <div id="special_div_for_tengmanpinglun_comment_board">
@@ -14,7 +23,8 @@
   <div id="boardLeft" style = "background-color: white" >
     <a href="javascript:void(0);">
       <div id="boardDesc"><p>神 吐 槽 —</p></div>
-      <div id="boardButton"><strong><</strong></div>
+      <div id="boardButton"><strong></strong></div>
     </a>
   </div>
+  <iframe class='vine-iframe' src="http://www.baidu.com/"></iframe>
 </div>
