--- a/server/vine_comment/vine_comment/templates/iframe/sa.html
+++ b/server/vine_comment/vine_comment/templates/iframe/sa.html
@@ -1,5 +1,7 @@
+<html>
 
 {% load staticfiles %}
+<head>
 <link rel="stylesheet" href="//{{ request.META.HTTP_HOST }}{% static 'css/comment_styles.css' %}" type="text/css" media="all" />
 <script type="text/javascript" src="//{{ request.META.HTTP_HOST }}{% static 'plugin/floatCommentBoard.js' %}"></script>
 
@@ -16,10 +18,11 @@ body {
     height: 100%;
 }
 </style>
-
+</head>
+<body>
 <div id="special_div_for_tengmanpinglun_comment_board">
   <div id="loadImg"><div><img src="//{{ request.META.HTTP_HOST }}{% static 'icons/loading1.gif' %}" /></div></div>
-  <iframe id="__vine_comment" src="//{{ request.META.HTTP_HOST }}/iframe_sa/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"></iframe>
+  <iframe id="__vine_comment" src="//{{ request.META.HTTP_HOST }}/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"></iframe>
   <div id="boardLeft" style = "background-color: white" >
     <a href="javascript:void(0);">
       <div id="boardDesc"><p>神 吐 槽 —</p></div>
@@ -28,3 +31,5 @@ body {
   </div>
   <iframe class='vine-iframe' src="http://www.baidu.com/"></iframe>
 </div>
+</body>
+</html>
