--- a/server/vine_comment/vine_comment/templates/iframe/sa.html
+++ b/server/vine_comment/vine_comment/templates/iframe/sa.html
@@ -26,7 +26,7 @@ body {
   <div id="boardLeft" style = "background-color: white" >
     <a href="javascript:void(0);">
       <div id="boardDesc"><p>神 吐 槽 —</p></div>
-      <div id="boardButton"><strong></strong></div>
+      <div id="boardButton"><strong><</strong></div>
     </a>
   </div>
   <iframe class='vine-iframe' src="http://www.baidu.com/"></iframe>
