--- a/server/vine_comment/vine_comment/templates/iframe/sa.html
+++ b/server/vine_comment/vine_comment/templates/iframe/sa.html
@@ -20,16 +20,19 @@ body {
 </style>
 </head>
 <body>
-<div id="special_div_for_tengmanpinglun_comment_board">
-  <div id="loadImg"><div><img src="//{{ request.META.HTTP_HOST }}{% static 'icons/loading1.gif' %}" /></div></div>
-  <iframe id="__vine_comment" src="//{{ request.META.HTTP_HOST }}/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"></iframe>
-  <div id="boardLeft" style = "background-color: white" >
-    <a href="javascript:void(0);">
-      <div id="boardDesc"><p>神 吐 槽 —</p></div>
-      <div id="boardButton"><strong><</strong></div>
-    </a>
-  </div>
-  <iframe class='vine-iframe' src="http://www.baidu.com/"></iframe>
-</div>
+    <div>
+        <iframe class='vine-iframe' src="http://www.baidu.com/"></iframe>
+    </div>
+
+    <div id="special_div_for_tengmanpinglun_comment_board">
+        <div id="loadImg"><div><img src="//{{ request.META.HTTP_HOST }}{% static 'icons/loading1.gif' %}" /></div></div>
+        <iframe id="__vine_comment" src="//{{ request.META.HTTP_HOST }}/comment/{{ url_b64 }}" width="100%" height="100%" frameborder="0" onload="document.getElementById('loadImg').style.display='none';"></iframe>
+        <div id="boardLeft" style = "background-color: white" >
+            <a href="javascript:void(0);">
+                <div id="boardDesc"><p>神 吐 槽 —</p></div>
+                <div id="boardButton"><strong><</strong></div>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
