--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
@@ -265,7 +265,7 @@ border-radius: 5px;
                     </li>
                     <li style="float:left; margin-right: 5px;">
                         <a class="vc-toolbar-button" title="插入图片">
-                            <img src="//{{ request.META.HTTP_HOST }}{% static 'icons/expression.jpg' %}" />
+                            <i class="fa fa-paperclip"></i>
                         </a>
                     </li>
                 </ul>
