not use default baidu now

--- a/server/vine_comment/vine_comment/templates/iframe/sa.html
+++ b/server/vine_comment/vine_comment/templates/iframe/sa.html
@@ -21,7 +21,7 @@ body {
 </head>
 <body>
     <div>
-        <iframe class='vine-iframe' src="http://www.baidu.com/"></iframe>
+        <iframe class='vine-iframe' src="{{url}}"></iframe>
     </div>
 
     <div id="special_div_for_tengmanpinglun_comment_board">
