--- a/server/vine_comment/vine_comment/templates/plugin/comments_plugin_relevant.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comments_plugin_relevant.html
@@ -1,5 +1,6 @@
 {% load humanize %}
 {% load avatar_tags %}
+{% load tags %}
 <!-- TODO -->
   <script>
     function expandReplyRelevant(id) {
@@ -32,7 +33,7 @@
             <ul class="list-group">
             {% for message in p_comment_tag.object_list %}
                  <li class="list-group-item">
-                     <a href="{{message.comment_board.url}}" target="_blank">
+                     <a href="/iframe_sa/{% b64encode message.comment_board.url %}" target="_blank">
                        <span class="comment-text" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
                      </a>
                      <br/>
