tuning css and add get_* methods for author

--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -92,8 +92,7 @@
   </div> <!-- /#col-lg-9 -->
 
   <div class="col-lg-3">
-    <div class="panel panel-default" style="height:200px; padding:10px;">
-		TODO-UI</br></br>
+    <div class="panel panel-default" style="padding:10px;">
     {% if user %}
     <strong>{{user}}</strong></br></br>
     发帖数：{{author.comments_sum}}</br>回帖数：</br>浏览数：</br>点赞数：
