temp disable plugin login

--- a/server/vine_comment/registration/templates/registration/base.html
+++ b/server/vine_comment/registration/templates/registration/base.html
@@ -1,1 +1,7 @@
 {% extends 'site/base.html' %}
+{% block content_start %}
+<div class="panel panel-default" style="padding: 0 20px 0 20px;">
+{% endblock %}
+{% block content_end %}
+</div>
+{% endblock %}
