add AuthorCommentsView to implement, use javascript:void(0)

--- a/server/vine_comment/vine_comment/templates/plugin/comment_list.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_list.html
@@ -71,15 +71,15 @@
             <ul class="dropdown-menu">
                 <li class="selected">
                 <!--TODO class="icon-checkmark" -->
-                <a href="#" data-action="sort" data-sort="popular" onclick="show_new_msg_list();">最新评论<i aria-hidden="true" class="icon-checkmark"></i></a>
+                <a href="javascript:void(0);" data-action="sort" data-sort="popular" onclick="show_new_msg_list();">最新评论<i aria-hidden="true" class="icon-checkmark"></i></a>
                 </li>
 
                 <li>
-                <a href="#" data-action="sort" data-sort="desc" onclick="show_hot_msg_list();">最热评论<i aria-hidden="true" class="icon-checkmark"></i></a>
+                <a href="javascript:void(0);" data-action="sort" data-sort="desc" onclick="show_hot_msg_list();">最热评论<i aria-hidden="true" class="icon-checkmark"></i></a>
                 </li>
 
                 <li>
-                <a href="#" data-action="sort" data-sort="asc" onclick="show_relevant_msg_list();">相关评论<i aria-hidden="true" class="icon-checkmark"></i></a>
+                <a href="javascript:void(0);" data-action="sort" data-sort="asc" onclick="show_relevant_msg_list();">相关评论<i aria-hidden="true" class="icon-checkmark"></i></a>
                 </li>
             </ul>
         </li>
