--- a/server/vine_comment/vine_comment/templates/plugin/comment_list.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_list.html
@@ -64,7 +64,7 @@
 
     <ul style="list-style-type:none; padding:10px;margin:0; ">
         <li data-role="post-sort" class="dropdown sorting" style="text-align:left;float:left; margin-right: 20px;">
-            <a href="#" class="dropdown-toggle" data-nav="conversation" data-toggle="dropdown">
+            <a href=javascript:void(0); class="dropdown-toggle" data-nav="conversation" data-toggle="dropdown">
             <b id="msg_list_type">最新评论</b>
             <span class="caret"></span>
             </a>
@@ -84,11 +84,11 @@
             </ul>
         </li>
         <li style="text-align:left;float:left; ">
-            <a href="#" onclick="show_you_like();"><b id="you_like_text">猜你喜欢</b></a>
+            <a href=javascript:void(0); onclick="show_you_like();"><b id="you_like_text">猜你喜欢</b></a>
         </li>
         
         <li style="float:right">
-            <a href="#" ><b>分享</b></a>             
+            <a href=javascript:void(0); ><b>分享</b></a>             
         </li>
     </ul>
 
