--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_meta.html
@@ -218,7 +218,7 @@ border-radius: 5px;
 		  <div class="message ">
 		    <div class="message-inside">
 		      <span class="message-text">吐槽成功！</span>
-		      <a class="dismiss" href="#" style="display: none;">×</a>
+		      <a class="dismiss" href=javascript:void(0); style="display: none;">×</a>
 		    </div>
 		  </div>
 		</div>
