--- a/server/vine_comment/vine_comment/templates/search/search.html
+++ b/server/vine_comment/vine_comment/templates/search/search.html
@@ -20,7 +20,7 @@
   <div class="form-group">
     <input id="search-input" type="text" name="q" class="form-control" placeholder="搜索全站内容" onkeypress="return SearchIfEnter(event)">
   </div>
-  <a href="#" onclick="Search(this)" data-original-title="" title=""><span class="glyphicon glyphicon-search"></span></a>
+  <a href=javascript:void(0); onclick="Search(this)" data-original-title="" title=""><span class="glyphicon glyphicon-search"></span></a>
 </form>
 </div>
 
