--- a/server/vine_comment/vine_comment/templates/common/reply.html
+++ b/server/vine_comment/vine_comment/templates/common/reply.html
@@ -19,7 +19,7 @@
       </span>
       [#{{ forloop.counter }}]
       <span class="comment-reply">{{reply.reply_str}}</span>
-	  <a href="#" style="margin-left:10px">{% if reply.user %}{{ reply.user }}{% else %}{{ reply.author_ip }}{% endif %}</a>
+	  <a href=javascript:void(0); style="margin-left:10px">{% if reply.user %}{{ reply.user }}{% else %}{{ reply.author_ip }}{% endif %}</a>
 	  <span class='comment-time'>提交于 {{ reply.time_added|naturaltime }}</span>
     </li>
   {% endfor %}
