--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_inside_comment_board.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_inside_comment_board.html
@@ -1,9 +1,9 @@
 	<div id="boardRight" >
 		<ul class="nav nav-pills" class="panel panel-default">
-		  <li class="active"><a href="#"><span class="badge pull-right">42</span> 口水</a> </li>
-		  <li><a href="#"><span class="badge pull-right">2</span> 账户</a></li>
-		  <li><a href="#"><span class="badge pull-right">33</span> 信封</a></li>
-		  <li><a href="#"> 设置</a></li>
+		  <li class="active"><a href=javascript:void(0);><span class="badge pull-right">42</span> 口水</a> </li>
+		  <li><a href=javascript:void(0);><span class="badge pull-right">2</span> 账户</a></li>
+		  <li><a href=javascript:void(0);><span class="badge pull-right">33</span> 信封</a></li>
+		  <li><a href=javascript:void(0);> 设置</a></li>
 		</ul>
 		<div id="showMsg">
 			<ul class="list-group">
@@ -17,7 +17,7 @@
 			</ul>
 			
 			<ul class='pagination'>
-			<li><a href="#">«</a></li>
+			<li><a href=javascript:void(0);>«</a></li>
 			{% for num in p_comment.paginator.page_range %}
 			  {% ifequal num p_comment.number %}
 			    <li><span class="current"><b>{{ num }}</b></span></li>
@@ -25,7 +25,7 @@
 			    <li><a href="?page={{ num }}">{{ num }}</a></li>
 			  {% endifequal %} 
 			{% endfor %}
-			<li><a href="#">»</a></li>
+			<li><a href=javascript:void(0);>»</a></li>
 			</ul>
 		</div>
 		<div class="row">
