--- a/server/vine_comment/vine_comment/templates/plugin/comment_view_raw.html
+++ b/server/vine_comment/vine_comment/templates/plugin/comment_view_raw.html
@@ -51,7 +51,7 @@
   {% ifequal num p_comment.number %}
     <li><span class="current"><b>{{ num }}</b></span></li>
   {% else %}
-    <li id='pagination_{{num}}'><a href="#">{{ num }}</a></li>
+    <li id='pagination_{{num}}'><a href=javascript:void(0);>{{ num }}</a></li>
     <script type="text/javascript">
       var l = document.location;
       $('#pagination_{{num}}').on('click', function() {
@@ -62,7 +62,7 @@
   {% endifequal %}
 {% endfor %}
 {% if p_comment.has_next %}
-<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="#">»</a></li>
+<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href=javascript:void(0);>»</a></li>
 <script type="text/javascript">
   var l = document.location;
   $('#pagination_arrow_{{ p_comment.next_page_number }}').on('click', function() {
