--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -54,12 +54,12 @@
                 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
         </div>
-        <!-- <a href="#" onclick="Search(this)"><span class="glyphicon glyphicon-search"></span></a> -->
+        <!-- <a href=javascript:void(0); onclick="Search(this)"><span class="glyphicon glyphicon-search"></span></a> -->
       </form>
       </div>
       <ul class="nav navbar-nav navbar-right">
         {% include 'auth/auth_all__li.html' %}
-        <li><a href="#" onclick="url_post_comment()" id="comments_url_post">我要发帖</a></li>
+        <li><a href=javascript:void(0); onclick="url_post_comment()" id="comments_url_post">我要发帖</a></li>
       </ul>
     </div> <!-- .navbar-collapse -->
   </div> <!-- .container -->
@@ -75,7 +75,7 @@
   	<div class="message ">
   		<div class="message-inside">
   			<span class="message-text">吐槽成功！</span>
-  			<a class="dismiss" href="#" style="display: none;">×</a>
+  			<a class="dismiss" href=javascript:void(0); style="display: none;">×</a>
   		</div>
   	</div>
   </div>
@@ -100,14 +100,14 @@
     {% if author %}
     <strong>{{author}}</strong></br></br>
 <table cellpadding="0" cellspacing="0" border="0" width="100%"><tbody><tr>
-<td width="50%" align="center"><a href="#" class="dark" style="display: block;"><span class="bigger">{{author.get_comments_sum}}</span><div class="sep3"></div><span class="card_fade">发帖数</span></a></td>
-<td width="50%" align="center"><a href="#" class="dark" style="display: block;"><span class="bigger">{{ author.get_star_count }}</span><div class="sep3"></div><span class="card_fade">点赞数</span></a></td>
+<td width="50%" align="center"><a href=javascript:void(0); class="dark" style="display: block;"><span class="bigger">{{author.get_comments_sum}}</span><div class="sep3"></div><span class="card_fade">发帖数</span></a></td>
+<td width="50%" align="center"><a href=javascript:void(0); class="dark" style="display: block;"><span class="bigger">{{ author.get_star_count }}</span><div class="sep3"></div><span class="card_fade">点赞数</span></a></td>
     {% comment %}回帖数：{{ author.get_reply_to_comment_count }}</br>
     浏览数：{{ author.get_view_count }}</br>{% endcomment %}
 </tr></tbody></table>
     {% else %}
     </br>
-    <center><strong>立即<a href="#" data-toggle="modal" data-target="#registerModal">注册</a></strong></center>
+    <center><strong>立即<a href=javascript:void(0); data-toggle="modal" data-target="#registerModal">注册</a></strong></center>
     </br>
     {% endif %}
     </div>
