--- a/server/vine_comment/vine_comment/templates/site/base.html
+++ b/server/vine_comment/vine_comment/templates/site/base.html
@@ -17,7 +17,7 @@
   <link href="{% static 'font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet"/>
   <link href="{% static 'twitter-bootstrap/3.0.3/css/bootstrap.min.css' %}" rel="stylesheet"/>
   {# navbar.css/navbar_black.css 表示navbar颜色 #}
-  <link href="{% static 'css/navbar_black.css' %}" rel="stylesheet"/>
+  <link href="{% static 'css/navbar_dark_blue.css' %}" rel="stylesheet"/>
   <link href="{% static 'css/navbar_dwarf.css' %}" rel="stylesheet"/>
   <link href="{% static 'css/base.css' %}" rel="stylesheet"/>
 
@@ -111,6 +111,13 @@
     </br>
     {% endif %}
     </div>
+    <div class="panel panel-default" style="padding:10px;">
+        {# TODO #}
+        <center><strong>活跃用户</strong></center>
+    </div>
+    {% comment %}
+    <div class="panel panel-default" style="padding:10px;"></div>
+    {% endcomment %}
   </div>
 </div>
 {% comment %}
